BL-2439 fix interaction between Bubbles and Overflow
* actually needed to hide scrollbars in Custom Pages anyway
* also hid scrollbars in source text

--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -367,11 +367,14 @@ TEXTAREA.province
 			}
 		}
 	}
-	.source-text{
+	.source-text {
 		font-size: 10pt;
 		line-height: 1.5;
 		color: black;
 		padding-top: 4px;
+		&.active {
+			overflow-y: hidden !important;
+		}
 
 		//thai script languages. If using Arial, they need to be 30% bigger or so. With the
 		// popular Angsana New, it would need to be like 100% bigger
